--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
-    <button id="rock" onclick="playGame('rock')">ROCK</button>
-    <button id="paper" onclick="playGame('paper')">PAPER</button>
-    <button id="scissors" onclick="playGame('scissors')">SCISSORS</button>
+    <div>
+      <button id="rock" onclick="playGame('rock')">ROCK</button>
+      <button id="paper" onclick="playGame('paper')">PAPER</button>
+      <button id="scissors" onclick="playGame('scissors')">SCISSORS</button>
+      <button id="reset" onClick="clearScore()">Reset Score</button>
+    </div>
+    <div>
+      <h2 id="playerScore">0</h2>
+      <h2 id="computerScore">0</h2>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
