Added finished files for reference

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <div>
-      <button id="rock" onclick="playGame('rock')">ROCK</button>
-      <button id="paper" onclick="playGame('paper')">PAPER</button>
-      <button id="scissors" onclick="playGame('scissors')">SCISSORS</button>
+      <button id="rock">ROCK</button>
+      <button id="paper">PAPER</button>
+      <button id="scissors">SCISSORS</button>
       <button id="reset" onClick="clearScore()">Reset Score</button>
     </div>
     <div>
